--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@
 
 .vs/3d obj builder (VS)/v16/ipch/AutoPCH/ee2586938d7ae3f2/MAIN.ipch
 
-output/
+out/
 
 x64/Debug/3d obj b.e0f2a3e9.tlog/3d obj builder (VS).lastbuildstate
 
